MyOrg/src/objects/PostOffice__c.object
<CustomObject>
    <fields>
        <fullName>Districtname__c</fullName>
        <label>Districtname</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taluk__c</fullName>
        <label>Taluk</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>circlename__c</fullName>
        <label>circlename</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>divisionname__c</fullName>
        <label>divisionname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>officeType__c</fullName>
        <label>officeType</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>officename__c</fullName>
        <label>officename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pincode__c</fullName>
        <label>pincode</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>regionname__c</fullName>
        <label>regionname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>statename__c</fullName>
        <label>statename</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>PostOffice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>po-{0000}</displayFormat>
        <label>PostOffice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PostOffices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>